--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.12.3",
+    "@material-ui/core": "^4.10.2",
     "@material/react-text-field": "^0.15.0",
-    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "^0.9.5"
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
@@ -21,7 +21,7 @@
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "babel-plugin-module-resolver": "^4.0.0",
-    "eslint": "^6.8.0",
+    "eslint": "^8.2.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-import": "^2.19.1",
