--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "^0.9.5"
+    "react-scripts": "^0.9.5",
+    "styled-components": "^5.3.3",
+    "styled-reset": "^4.3.4"
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
