--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@material-ui/core": "^4.10.2",
     "@material/react-material-icon": "^0.15.0",
     "@material/react-text-field": "^0.15.0",
-    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "google-maps-react": "^2.0.6",
@@ -14,13 +14,13 @@
     "react-dom": "^16.13.1",
     "react-lottie": "^1.2.3",
     "react-rating-stars-component": "^2.2.0",
-    "react-redux": "^7.2.6",
-    "react-scripts": "^0.9.5",
-    "react-slick": "^0.28.1",
-    "redux": "^4.1.2",
+    "react-redux": "^7.2.1",
+    "react-scripts": "3.4.1",
+    "react-slick": "^0.27.0",
+    "redux": "^4.0.5",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^5.3.3",
-    "styled-reset": "^4.3.4"
+    "styled-components": "^5.1.1",
+    "styled-reset": "^4.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
@@ -29,9 +29,8 @@
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.7.4",
     "babel-eslint": "^10.0.3",
-    "babel-loader": "^8.0.6",
     "babel-plugin-module-resolver": "^4.0.0",
-    "eslint": "^8.2.0",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-import": "^2.19.1",
